--- a/SouthernsChat/Vagrantfile
+++ b/SouthernsChat/Vagrantfile
@@ -8,7 +8,7 @@
 LCB_BRANCH = ENV['LCB_BRANCH'] || 'master'
 
 
-# Script that we run to bootstrap the system to run Let's Chat
+# Script that we run to bootstrap the system to run Southern's Chat
 LCB_SCRIPT = <<EOF
 sudo apt-get update
 sudo apt-get install -y python-software-properties
